--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,9 +4,12 @@ on:
   push:
     branches:
       - main
+
 jobs:
   main:
     runs-on: ubuntu-latest
+    env:
+      CANDLE_BUILD: true
     strategy:
       fail-fast: false
       matrix:
