--- a/native/candlex/.cargo/config.toml
+++ b/native/candlex/.cargo/config.toml
@@ -3,3 +3,7 @@ rustflags = [
     "-C", "link-arg=-undefined",
     "-C", "link-arg=dynamic_lookup",
 ]
+
+# Provides a small build size, but takes more time to build.
+[profile.release]
+lto = true
