--- a/.github/workflows/binaries.yml
+++ b/.github/workflows/binaries.yml
@@ -42,8 +42,9 @@ jobs:
           project-version: ${{ env.PROJECT_VERSION }}
           target: ${{ matrix.job.target }}
           nif-version: ${{ matrix.nif_version }}
-          # use-cross: false doesn't work
-          # I think because of https://github.com/actions/runner/issues/1173
+          # use-cross: false
+          # doesn't work, not sure why
+          # See https://github.com/philss/rustler-precompiled-action/pull/9
           use-cross: null
 
       - uses: softprops/action-gh-release@v1
