--- a/.github/workflows/binaries.yml
+++ b/.github/workflows/binaries.yml
@@ -29,7 +29,7 @@ jobs:
           - { target: x86_64-pc-windows-gnu , os: windows-2022 }
           - { target: x86_64-unknown-linux-gnu , os: ubuntu-22.04 }
     env:
-      PROJECT_VERSION: "0.1.1"
+      PROJECT_VERSION: "0.1.2-test2"
 
     steps:
       - uses: actions/checkout@v4
