--- a/.github/workflows/binaries.yml
+++ b/.github/workflows/binaries.yml
@@ -25,8 +25,11 @@ jobs:
       matrix:
         nif_version: ["2.16"]
         job:
+          - { target: aarch64-apple-darwin , os: macos-12 }
+          - { target: aarch64-unknown-linux-gnu , os: ubuntu-22.04 }
           - { target: x86_64-apple-darwin , os: macos-12 }
           - { target: x86_64-pc-windows-gnu , os: windows-2022 }
+          - { target: x86_64-pc-windows-msvc , os: windows-2022 }
           - { target: x86_64-unknown-linux-gnu , os: ubuntu-22.04 }
     env:
       PROJECT_VERSION: "0.1.2-alpha1"
