--- a/.github/workflows/binaries.yml
+++ b/.github/workflows/binaries.yml
@@ -26,7 +26,7 @@ jobs:
         nif_version: ["2.16"]
         job:
           - { target: aarch64-apple-darwin , os: macos-12 }
-          - { target: aarch64-unknown-linux-gnu , os: ubuntu-22.04 }
+          - { target: aarch64-unknown-linux-gnu , os: ubuntu-22.04, use-cross: true }
           - { target: x86_64-apple-darwin , os: macos-12 }
           - { target: x86_64-pc-windows-gnu , os: windows-2022 }
           - { target: x86_64-pc-windows-msvc , os: windows-2022 }
@@ -45,11 +45,8 @@ jobs:
           project-name: candlex
           project-version: ${{ env.PROJECT_VERSION }}
           target: ${{ matrix.job.target }}
+          use-cross: ${{ matrix.job.use-cross }}
           nif-version: ${{ matrix.nif_version }}
-          # use-cross: false
-          # doesn't work, not sure why
-          # See https://github.com/philss/rustler-precompiled-action/pull/9
-          use-cross: null
 
       - uses: softprops/action-gh-release@v1
         with:
