binaries release draft by default

--- a/.github/workflows/binaries.yml
+++ b/.github/workflows/binaries.yml
@@ -50,5 +50,6 @@ jobs:
 
       - uses: softprops/action-gh-release@v1
         with:
+          draft: true
           files: ${{ steps.precompile.outputs.file-path }}
         if: startsWith(github.ref, 'refs/tags/')
