--- a/.github/workflows/binaries.yml
+++ b/.github/workflows/binaries.yml
@@ -32,7 +32,7 @@ jobs:
           - { target: x86_64-pc-windows-msvc , os: windows-2022 }
           - { target: x86_64-unknown-linux-gnu , os: ubuntu-22.04 }
     env:
-      PROJECT_VERSION: "0.1.2-alpha2"
+      VERSION: "0.1.2"
 
     steps:
       - uses: actions/checkout@v4
@@ -43,7 +43,7 @@ jobs:
         with:
           project-dir: "native/candlex"
           project-name: candlex
-          project-version: ${{ env.PROJECT_VERSION }}
+          project-version: ${{ env.VERSION }}
           target: ${{ matrix.job.target }}
           use-cross: ${{ matrix.job.use-cross }}
           nif-version: ${{ matrix.nif_version }}
