--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,7 +9,7 @@ jobs:
   main:
     runs-on: ubuntu-latest
     env:
-      CANDLE_BUILD: true
+      NATIVE_BUILD: true
     strategy:
       fail-fast: false
       matrix:
