--- a/.github/workflows/binaries.yml
+++ b/.github/workflows/binaries.yml
@@ -33,9 +33,6 @@ jobs:
             os: macos-12
           - target: x86_64-unknown-linux-gnu
             os: ubuntu-22.04
-    env:
-      VERSION: "0.1.2"
-
     steps:
       - uses: actions/checkout@v4
       - run: rustup target add ${{ matrix.target }}
@@ -45,7 +42,7 @@ jobs:
         with:
           project-dir: "native/candlex"
           project-name: candlex
-          project-version: ${{ env.VERSION }}
+          project-version: "0.1.2"
           target: ${{ matrix.target }}
           use-cross: ${{ matrix.use-cross }}
           nif-version: "2.16"
