--- a/.github/workflows/binaries.yml
+++ b/.github/workflows/binaries.yml
@@ -76,6 +76,7 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
+      - uses: dtolnay/rust-toolchain@stable
       - run: rustup target add ${{ matrix.target }}
 
       - uses: philss/rustler-precompiled-action@main
