--- a/.github/workflows/binaries.yml
+++ b/.github/workflows/binaries.yml
@@ -76,7 +76,7 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
-      - run: apt update && apt install -y curl
+      - run: apt update && apt install -y bash curl
       - uses: dtolnay/rust-toolchain@stable
       - run: rustup target add ${{ matrix.target }}
 
