--- a/.github/workflows/binaries.yml
+++ b/.github/workflows/binaries.yml
@@ -43,7 +43,7 @@ jobs:
       - uses: actions/checkout@v4
       - run: rustup target add ${{ matrix.target }}
 
-      - uses: philss/rustler-precompiled-action@main
+      - uses: mimiquate/rustler-precompiled-action@fix-build-sh-with-container
         id: precompile
         with:
           project-dir: ${{ env.PROJECT_DIR }}
