--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,6 +33,6 @@ jobs:
       - run: mix deps.unlock --check-unused
         if: ${{ matrix.lint }}
       - run: mix deps.compile
-      # - run: mix compile --warnings-as-errors
-      #   if: ${{ matrix.lint }}
+      - run: mix compile --warnings-as-errors
+        if: ${{ matrix.lint }}
       - run: mix test
