--- a/native/candlex/Cargo.toml
+++ b/native/candlex/Cargo.toml
@@ -12,6 +12,7 @@ crate-type = ["cdylib"]
 [dependencies]
 candle-core = { git = "https://github.com/huggingface/candle" }
 half = "2.3.1"
+nalgebra = "0.32.3"
 num-traits = "0.2.17"
 rustler = { version = "0.30.0", default-features = false, features = ["derive", "nif_version_2_16"] }
 statrs = "0.16.0"
