--- a/native/candlex/Cargo.toml
+++ b/native/candlex/Cargo.toml
@@ -11,6 +11,7 @@ crate-type = ["cdylib"]
 
 [dependencies]
 candle-core = { git = "https://github.com/huggingface/candle" }
+faer = "0.14.1"
 half = "2.3.1"
 num-traits = "0.2.17"
 rustler = { version = "0.30.0", default-features = false, features = ["derive", "nif_version_2_16"] }
