--- a/native/candlex/Cargo.toml
+++ b/native/candlex/Cargo.toml
@@ -10,7 +10,7 @@ path = "src/lib.rs"
 crate-type = ["cdylib"]
 
 [dependencies]
-candle-core = { git = "https://github.com/huggingface/candle" }
+candle-core = { path = "../../../candle/candle-core" }
 half = "2.3.1"
 num-traits = "0.2.17"
 rustler = { version = "0.30.0", default-features = false, features = ["derive", "nif_version_2_16"] }
