--- a/.github/workflows/binaries.yml
+++ b/.github/workflows/binaries.yml
@@ -35,6 +35,9 @@ jobs:
           - target: aarch64-unknown-linux-gnu
             os: ubuntu-22.04
             use-cross: true
+          - target: arm-unknown-linux-gnueabihf
+            os: ubuntu-22.04
+            use-cross: true
           - target: x86_64-apple-darwin
             os: macos-12
           - target: x86_64-unknown-linux-gnu
