--- a/native/candlex/Cargo.toml
+++ b/native/candlex/Cargo.toml
@@ -22,3 +22,4 @@ bindgen_cuda = { version = "0.1.1", optional = true }
 
 [features]
 cuda = ["candle-core/cuda", "dep:bindgen_cuda"]
+metal = ["candle-core/metal"]
