test(examples): adds speech_to_text.exs

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,4 +39,5 @@ jobs:
       - run: mix test
       - run: mix run examples/linear_regression.exs
       - run: mix run examples/image_classification.exs
+      - run: mix run examples/speech_to_text.exs
       - run: mix run examples/text_classification.exs
