test(examples): adds text_classification.exs

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,3 +35,4 @@ jobs:
         if: ${{ matrix.lint }}
       - run: mix test
       - run: mix run examples/linear_regression.exs
+      - run: mix run examples/text_classification.exs
