--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,7 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          - elixir_version: 1.15.7
+          - elixir_version: 1.16.0-rc.1
             otp_version: 26.1.2
             lint: true
           - elixir_version: 1.14.5
