--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,6 +15,9 @@ jobs:
           - elixir_version: 1.16.0-rc.1
             otp_version: 26.1.2
             lint: true
+          - elixir_version: 1.15.7
+            otp_version: 26.1.2
+            lint: true
           - elixir_version: 1.14.5
             otp_version: 25.3.2.7
     steps:
