--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,10 +13,10 @@ jobs:
       matrix:
         include:
           - elixir_version: 1.16.0-rc.1
-            otp_version: 26.1.2
+            otp_version: '26.2'
             lint: true
           - elixir_version: 1.15.7
-            otp_version: 26.1.2
+            otp_version: '26.2'
             lint: true
           - elixir_version: 1.14.5
             otp_version: 25.3.2.7
