--- a/native/candlex/Cargo.toml
+++ b/native/candlex/Cargo.toml
@@ -18,7 +18,7 @@ statrs = "0.16.0"
 thiserror = "1.0.56"
 
 [build-dependencies]
-anyhow = "1.0.79"
+bindgen_cuda = { version = "0.1.1", optional = true }
 
 [features]
-cuda = ["candle-core/cuda"]
+cuda = ["candle-core/cuda", "dep:bindgen_cuda"]
