--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,15 +10,21 @@ jobs:
     runs-on: ubuntu-latest
     env:
       CANDLEX_NIF_BUILD: true
+      LOCK: ${{matrix.lock}}
     strategy:
       fail-fast: false
       matrix:
         include:
           - elixir_version: 1.16.0
             otp_version: '26.2.1'
+            lock: "nx-edge"
+          - elixir_version: 1.16.0
+            otp_version: '26.2.1'
+            lock: "nx06"
             lint: true
           - elixir_version: 1.15.7
             otp_version: '25.3.2.8'
+            lock: "nx06"
     steps:
       - uses: actions/checkout@v4
       - run: cargo fmt --check --manifest-path=native/candlex/Cargo.toml
