ci: tests against older dependencies with blend

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,6 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     env:
       CANDLEX_NIF_BUILD: true
+      BLEND: ${{ matrix.blend }}
     strategy:
       fail-fast: false
       matrix:
@@ -19,6 +20,9 @@ jobs:
             lint: true
           - elixir_version: 1.15.7
             otp_version: '25.3.2.8'
+          - elixir_version: 1.15.7
+            otp_version: '25.3.2.8'
+            blend: "bumblebee03"
     steps:
       - uses: actions/checkout@v4
       - run: cargo fmt --check --manifest-path=native/candlex/Cargo.toml
