--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,6 +9,7 @@ jobs:
   main:
     runs-on: ubuntu-latest
     env:
+      MIX_ENV: test
       CANDLEX_NIF_BUILD: true
       BLEND: ${{ matrix.blend }}
     strategy:
