cache downloaded crates

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,7 +33,10 @@ jobs:
           elixir-version: ${{matrix.elixir_version}}
       - uses: actions/cache@v4
         with:
-          path: _build/*/lib/candlex/native/candlex/
+          path: |
+            _build/*/lib/candlex/native/candlex/
+            .cargo/registry/cache
+            .cargo/registry/index
           key: cargo-${{ runner.os }}-${{ hashFiles('native/candlex/Cargo.lock') }}
       - run: mix deps.unlock --all && mix deps.get
         if: ${{ github.event_name == 'schedule' }}
